--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Goal is 25!</title>
+  <title>The Goal is 25 chunks!</title>
   <style>
     body {
       display: flex;
@@ -48,7 +48,7 @@
 <body>
   <div class="counter-container">
     <div id="click-count">0</div>
-    <button id="click-button">Click me!</button>
+    <button id="click-button">Click to add chunk!</button>
   </div>
 
   <audio id="click-sound" src="luigisound.mp3"></audio>
@@ -69,7 +69,7 @@
 
       if (count === 25) {
         celebrationSound.play();
-        alert('Congratulations! You reached 50 clicks!');
+        alert('Congratulations! You reached 25 chunks!');
       }
     });
   </script>
