--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: linear-gradient(to bottom right, #ff6b6b, #ffa500);
+      background-image: url('https://cdn.prod.website-files.com/63e305d9e4c8a10564270580/65e022244bc289ade7377cd6_contextual%20ai.webp');
+      background-size: cover;
       font-family: 'Montserrat', sans-serif;
+      color: #333;
     }
 
     .counter-container {
       text-align: center;
       padding: 40px;
-      background-color: #fff;
+      background-color: rgba(255, 255, 255, 0.8);
       border-radius: 20px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     }
