--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       height: 100vh;
       margin: 0;
       background-image: url('https://cdn.prod.website-files.com/63e305d9e4c8a10564270580/65e022244bc289ade7377cd6_contextual%20ai.webp');
-      background-size: cover;
+      background-size: contain; /* Change from cover to contain */
+      background-repeat: no-repeat;
+      background-position: center;
       font-family: 'Montserrat', sans-serif;
       color: #333;
     }
