--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <style>
     body {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
       background-image: url('https://cdn.prod.website-files.com/63e305d9e4c8a10564270580/65e022244bc289ade7377cd6_contextual%20ai.webp');
-      background-size: contain; /* Change from cover to contain */
+      background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
       font-family: 'Montserrat', sans-serif;
@@ -23,6 +24,7 @@
       background-color: rgba(255, 255, 255, 0.8);
       border-radius: 20px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      margin-bottom: 20px;
     }
 
     #click-count {
@@ -46,6 +48,18 @@
     #click-button:hover {
       background-color: #ff4d4d;
     }
+
+    .slider-container {
+      text-align: center;
+      background-color: rgba(255, 255, 255, 0.8);
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    }
+
+    .slider-container input[type=range] {
+      width: 300px;
+    }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -53,6 +67,11 @@
   <div class="counter-container">
     <div id="click-count">0</div>
     <button id="click-button">Click to add chunk!</button>
+  </div>
+
+  <div class="slider-container">
+    <label for="volume-slider">Volume: </label>
+    <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
   </div>
 
   <audio id="click-sound" src="luigisound.mp3"></audio>
@@ -63,6 +82,7 @@
     const clickButton = document.getElementById('click-button');
     const clickSound = document.getElementById('click-sound');
     const celebrationSound = document.getElementById('celebration-sound');
+    const volumeSlider = document.getElementById('volume-slider');
 
     let count = 0;
 
@@ -76,6 +96,16 @@
         alert('Congratulations! You reached 25 chunks!');
       }
     });
+
+    volumeSlider.addEventListener('input', (event) => {
+      const volume = event.target.value;
+      clickSound.volume = volume;
+      celebrationSound.volume = volume;
+    });
+
+    // Set initial volume
+    clickSound.volume = volumeSlider.value;
+    celebrationSound.volume = volumeSlider.value;
   </script>
 </body>
 </html>
