--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <style>
     body {
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
@@ -24,7 +23,6 @@
       background-color: rgba(255, 255, 255, 0.8);
       border-radius: 20px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-      margin-bottom: 20px;
     }
 
     #click-count {
@@ -50,15 +48,24 @@
     }
 
     .slider-container {
-      text-align: center;
+      position: fixed;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
       background-color: rgba(255, 255, 255, 0.8);
-      padding: 20px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     .slider-container input[type=range] {
-      width: 300px;
+      writing-mode: bt-lr; /* IE */
+      -webkit-appearance: slider-vertical; /* WebKit */
+      width: 8px;
+      height: 150px;
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -70,7 +77,6 @@
   </div>
 
   <div class="slider-container">
-    <label for="volume-slider">Volume: </label>
     <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
   </div>
 
