--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       background-position: center;
       font-family: 'Montserrat', sans-serif;
       color: #333;
+      overflow: hidden; /* Prevent scrollbars */
     }
 
     .counter-container {
@@ -23,6 +24,7 @@
       background-color: rgba(255, 255, 255, 0.8);
       border-radius: 20px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      z-index: 2; /* Ensure it stays above the ball */
     }
 
     #click-count {
@@ -59,6 +61,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      z-index: 2; /* Ensure it stays above the ball */
     }
 
     .slider-container input[type=range] {
@@ -66,6 +69,15 @@
       -webkit-appearance: slider-vertical; /* WebKit */
       width: 8px;
       height: 150px;
+    }
+
+    .ball {
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      background-color: yellow;
+      border-radius: 50%;
+      z-index: 1; /* Ensure it stays behind other elements */
     }
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -80,6 +92,8 @@
     <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5">
   </div>
 
+  <div class="ball" id="ball"></div>
+
   <audio id="click-sound" src="luigisound.mp3"></audio>
   <audio id="celebration-sound" src="marios_victory.mp3"></audio>
 
@@ -89,6 +103,7 @@
     const clickSound = document.getElementById('click-sound');
     const celebrationSound = document.getElementById('celebration-sound');
     const volumeSlider = document.getElementById('volume-slider');
+    const ball = document.getElementById('ball');
 
     let count = 0;
 
@@ -112,6 +127,29 @@
     // Set initial volume
     clickSound.volume = volumeSlider.value;
     celebrationSound.volume = volumeSlider.value;
+
+    // Bouncing ball logic
+    let x = Math.random() * (window.innerWidth - 50);
+    let y = Math.random() * (window.innerHeight - 50);
+    let dx = 2;
+    let dy = 2;
+
+    function animateBall() {
+      if (x + dx > window.innerWidth - 50 || x + dx < 0) {
+        dx = -dx;
+      }
+      if (y + dy > window.innerHeight - 50 || y + dy < 0) {
+        dy = -dy;
+      }
+      x += dx;
+      y += dy;
+      ball.style.left = x + 'px';
+      ball.style.top = y + 'px';
+
+      requestAnimationFrame(animateBall);
+    }
+
+    animateBall();
   </script>
 </body>
 </html>
