--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <div class="counter-container">
     <div id="click-count">0</div>
-    <button id="click-button">Click to add chunk!</button>
+    <button id="click-button">Click to add completed page!</button>
   </div>
 
   <div class="slider-container">
